--- a/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
+++ b/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
@@ -15,13 +15,11 @@ To do so, mount your credentials and configurations to the `{devworkspace}` cont
 
 * Mount your credentials and sensitive configurations as {kubernetes} xref:mounting-secrets.adoc[Secrets].
 
-* Mount your non-sensitve configurations as {kubernetes} xref:mounting-configmaps.adoc[ConfigMaps].
+* Mount your non-sensitive configurations as {kubernetes} xref:mounting-configmaps.adoc[ConfigMaps].
 
 If you need to allow the `{devworkspace}` Pods in the cluster to access container registries that require authentication, create an xref:creating-image-pull-secrets.adoc[image pull Secret] for the `{devworkspace}` Pods.
 
 The mounting process uses the standard {kubernetes} mounting mechanism and requires applying additional labels and annotations to your existing resources. Resources are mounted when starting a new workspace or restarting an existing one.
-
-pass:[<!-- vale RedHat.CaseSensitiveTerms = YES -->]
 
 You can create permanent mount points for various components:
 
@@ -37,3 +35,5 @@ You can create permanent mount points for various components:
 
 * link:https://kubernetes.io/docs/concepts/configuration/secret/[Kubernetes Documentation: Secrets]
 * link:https://kubernetes.io/docs/concepts/configuration/configmap/[Kubernetes Documentation: ConfigMaps]
+
+pass:[<!-- vale RedHat.CaseSensitiveTerms = YES -->]
