--- a/modules/administration-guide/pages/user-workspaces.adoc
+++ b/modules/administration-guide/pages/user-workspaces.adoc
@@ -38,6 +38,6 @@ Use the devfile v2 format to specify the tools and runtime applications of a {pr
 The following diagram shows one running {prod-short} workspace and its components.
 
 .{prod-short} workspace components
-image::workspace-components-with-dw.png[]
+image::workspace-components-with-dw.png[Workspace components]
 
 In the diagram, there is one running workspaces.
