chore: Vale errors fix (#2678)
* Vale errors fix

* additional fixes

* additional fixes

* additional fixes

* additional fixes

* additional fixes

* vale fix

* vale fix

* vale fix

* vale fix

* vale fix

* vale fix

--- a/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
+++ b/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
@@ -7,6 +7,8 @@
 [id="authenticating-to-a-git-server-from-a-workspace"]
 = Authenticating to a Git server from a workspace
 
+pass:[<!-- vale RedHat.CaseSensitiveTerms = NO -->]
+
 In a workspace, you can run Git commands that require user authentication like cloning a remote private Git repository or pushing to a remote public or private Git repository.
 
 User authentication to a Git server from a workspace is configured by the administrator or, in some cases, by the individual user:
@@ -19,3 +21,5 @@ User authentication to a Git server from a workspace is configured by the admini
 * xref:administration-guide:configuring-oauth-for-git-providers.adoc[Administration Guide: Configuring OAuth for Git providers]
 * xref:using-a-git-provider-access-token.adoc[User Guide: Using a Git-provider access token]
 * link:https://github.com/devfile/devworkspace-operator/blob/main/docs/additional-configuration.adoc#configuring-devworkspaces-to-use-ssh-keys-for-git-operations[Configuring DevWorkspaces to use SSH keys for Git operations]
+
+pass:[<!-- vale RedHat.CaseSensitiveTerms = YES -->]
