--- a/modules/administration-guide/pages/user-workspaces.adoc
+++ b/modules/administration-guide/pages/user-workspaces.adoc
@@ -31,13 +31,13 @@ A workspace is one {orch-name} Deployment containing the workspace containers an
 * Secrets
 * Persistent Volumes (PV)
 
-A {prod-short} workspace contains the source code of the projects, persisted in a {platforms-name} Persistent Volume (PV). Microservices have read-write access to this shared directory.
+A {prod-short} workspace contains the source code of the projects, persisted in a {platforms-name} Persistent Volume (PV). Microservices have read/write access to this shared directory.
 
 Use the devfile v2 format to specify the tools and runtime applications of a {prod-short} workspace.
 
 The following diagram shows one running {prod-short} workspace and its components.
 
 .{prod-short} workspace components
-image::workspace-components-with-dw.png[]
+image::workspace-components-with-dw.png[Workspace components]
 
 In the diagram, there is one running workspaces.
