--- a/modules/end-user-guide/pages/requesting-persistent-storage-for-workspaces.adoc
+++ b/modules/end-user-guide/pages/requesting-persistent-storage-for-workspaces.adoc
@@ -7,6 +7,8 @@
 [id="requesting-persistent-storage-for-workspaces"]
 = Requesting persistent storage for workspaces
 
+pass:[<!-- vale RedHat.CaseSensitiveTerms = NO -->]
+
 {prod-short} workspaces and workspace data are ephemeral and are lost when the workspace stops.
 
 To preserve the workspace state in persistent storage while the workspace is stopped, request a {kubernetes} PersistentVolume (PV) for the `{devworkspace}` containers in the {orch-name} cluster of your organization's {prod-short} instance.
@@ -29,3 +31,5 @@ Starting another, concurrently running workspace with a link:https://kubernetes.
 
 include::partial$proc_requesting-persistent-storage-in-a-devfile.adoc[leveloffset=+1]
 include::partial$proc_requesting-persistent-storage-in-a-pvc.adoc[leveloffset=+1]
+
+pass:[<!-- vale RedHat.CaseSensitiveTerms = YES -->]
