--- a/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
+++ b/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
@@ -7,13 +7,15 @@
 [id="using-credentials-and-configurations-in-workspaces"]
 = Using credentials and configurations in workspaces
 
+pass:[<!-- vale RedHat.CaseSensitiveTerms = NO -->]
+
 You can use your credentials and configurations in your workspaces.
 
 To do so, mount your credentials and configurations to the `{devworkspace}` containers in the {orch-name} cluster of your organization's {prod-short} instance:
 
 * Mount your credentials and sensitive configurations as {kubernetes} xref:mounting-secrets.adoc[Secrets].
 
-* Mount your non-sensitve configurations as {kubernetes} xref:mounting-configmaps.adoc[ConfigMaps].
+* Mount your non-sensitive configurations as {kubernetes} xref:mounting-configmaps.adoc[ConfigMaps].
 
 If you need to allow the `{devworkspace}` Pods in the cluster to access container registries that require authentication, create an xref:creating-image-pull-secrets.adoc[image pull Secret] for the `{devworkspace}` Pods.
 
@@ -33,3 +35,5 @@ You can create permanent mount points for various components:
 
 * link:https://kubernetes.io/docs/concepts/configuration/secret/[Kubernetes Documentation: Secrets]
 * link:https://kubernetes.io/docs/concepts/configuration/configmap/[Kubernetes Documentation: ConfigMaps]
+
+pass:[<!-- vale RedHat.CaseSensitiveTerms = YES -->]
