--- a/modules/administration-guide/partials/proc_configuring-number-of-replicas.adoc
+++ b/modules/administration-guide/partials/proc_configuring-number-of-replicas.adoc
@@ -5,7 +5,7 @@
 :page-aliases:
 
 [id="configuring-number-of-replicas"]
-= Configuring a number of replicas
+= Configuring the number of replicas
 
 To configure the number of replicas for {prod-short} operands using {kubernetes} `HorizontalPodAutoscaler`
 (HPA), you can define an `HPA` resource for deployment. The `HPA` dynamically adjusts the number
