feat: fuse-overlayfs configuration
Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -14,6 +14,9 @@
 ** xref:starting-a-workspace-from-a-raw-devfile-url.adoc[]
 ** xref:basic-actions-you-can-perform-on-a-workspace.adoc[]
 ** xref:authenticating-to-a-git-server-from-a-workspace.adoc[]
+** xref:using-the-fuse-overlay-storage-driver.adoc[]
+*** xref:accessing-fuse.adoc[]
+*** xref:enabling-overlay-with-a-configmap.adoc[]
 * xref:using-che-in-team-workflow.adoc[]
 ** xref:first-time-contributors.adoc[]
 ** xref:benefits-of-pull-requests-review-in-che.adoc[]
