--- a/modules/end-user-guide/pages/getting-started-with-che.adoc
+++ b/modules/end-user-guide/pages/getting-started-with-che.adoc
@@ -14,3 +14,4 @@ If your organization is already running a {prod-short} instance, you can get sta
 * xref:starting-a-workspace-from-a-raw-devfile-url.adoc[]
 * xref:basic-actions-you-can-perform-on-a-workspace.adoc[]
 * xref:authenticating-to-a-git-server-from-a-workspace.adoc[]
+* xref:using-the-fuse-overlay-storage-driver.adoc[]
