Update configuring-a-user-namespace.adoc (#2683)
* Update configuring-a-user-namespace.adoc

* Update configuring-a-user-namespace.adoc

--- a/modules/administration-guide/pages/configuring-a-user-namespace.adoc
+++ b/modules/administration-guide/pages/configuring-a-user-namespace.adoc
@@ -10,7 +10,7 @@
 This procedure walks you through the process of using {prod-short}
 to replicate `ConfigMaps`, `Secrets` and `PersistentVolumeClaim` from `{prod-namespace}` namespace to numerous
 user-specific namespaces. The {prod-short} automates the synchronization of important configuration
-data such as passwords, SSH keys, and certificates to user namespaces.
+data such as shared credentials, configuration files, and certificates to user namespaces.
 
 If you make changes to a {kubernetes} resource in an {prod-namespace} namespace,
 {prod-short} will immediately replicate the changes across all users namespaces.
