--- a/modules/end-user-guide/pages/using-the-fuse-overlay-storage-driver.adoc
+++ b/modules/end-user-guide/pages/using-the-fuse-overlay-storage-driver.adoc
@@ -17,7 +17,7 @@ For more efficient image management, it is recommended to use the fuse-overlayfs
 
 To use fuse-overlayfs in a workspace, there are three requirements:
 
-. The administrator has configured fuse-overlayfs on the cluster by following xref:administration-guide:configuring-fuse.adoc[].
+. The administrator has configured `/dev/fuse` access on the cluster by following xref:administration-guide:configuring-fuse.adoc[].
 . The workspace has the necessary annotations for using the `/dev/fuse` device. See xref:accessing-fuse.adoc[].
 . The `storage.conf` file in the workspace container has been configured to use fuse-overlayfs. See xref:enabling-overlay-with-a-configmap.adoc[].
 
