Change the disable subdomain isolation property to false

--- a/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
@@ -36,7 +36,7 @@ metadata:
   annotations:
     che.eclipse.org/oauth-scm-server: github
     che.eclipse.org/scm-server-endpoint: __<github_server_url>__ <2>
-    che.eclipse.org/scm-github-disable-subdomain-isolation: true <3>
+    che.eclipse.org/scm-github-disable-subdomain-isolation: 'false' <3>
 type: Opaque
 stringData:
   id: __<GitHub_OAuth_Client_ID>__ <4>
