--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -5,6 +5,7 @@
 *** xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[]
 **** xref:url-parameter-concatenation.adoc[]
 **** xref:url-parameter-for-the-ide.adoc[]
+**** xref:url-parameter-for-the-ide-image.adoc[]
 **** xref:url-parameter-for-starting-duplicate-workspaces.adoc[]
 **** xref:url-parameter-for-the-devfile-file-name.adoc[]
 **** xref:url-parameter-for-the-devfile-file-path.adoc[]
