--- a/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
@@ -29,6 +29,7 @@ CAUTION: The {prod} Operator depends on the {devworkspace} Operator. If you inst
 
 CAUTION: If you want to onboard link:https://docs.openshift.com/container-platform/4.14/web_console/web_terminal/installing-web-terminal.html[Web Terminal Operator] on the cluster make sure to use the same installation namespace as {prod} Operator since both depend on {devworkspace} Operator. Web Terminal Operator, {prod} Operator, and {devworkspace} Operator must be installed in the same namespace.
 
+. Create the `{prod-namespace}` project in OpenShift as follows:
 +
 [subs="+attributes"]
 ----
