--- a/modules/administration-guide/pages/configuring-fuse.adoc
+++ b/modules/administration-guide/pages/configuring-fuse.adoc
@@ -44,13 +44,20 @@ For a multi node cluster, set:
 $ NODE_ROLE=worker
 ----
 
+. Set an environment variable for the OpenShift Butane config version. This version is the major and minor of the OpenShift cluster. For example, `4.12.0`, `4.13.0`, or `4.14.0`.
++
+[subs="+quotes,+attributes,+macros"]
+----
+$ VERSION=4.12.0
+----
+
 . Create a `MachineConfig` resource that creates a drop-in CRI-O configuration file named `99-podman-fuse` in the `NODE_ROLE` nodes. This configuration file allows access to the `/dev/fuse` device for certain pods.
 +
 [subs="+quotes,+attributes,+macros"]
 ----
 cat << EOF | butane | oc apply -f -
 variant: openshift
-version: 4.12.0
+version: ${VERSION}
 metadata:
   labels:
     machineconfiguration.openshift.io/role: ${NODE_ROLE}
