--- a/modules/end-user-guide/pages/url-parameter-for-the-ide-image.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-ide-image.adoc
@@ -7,17 +7,24 @@
 [id="url-parameter-for-the-ide-image"]
 = URL parameter for the IDE image
 
-You can use the `editor-image` parameter to set the custom IDE image in the following scenarios:
+You can use the `editor-image` parameter to set the custom IDE image for the workspace.
 
-* The Git repository contains no xref:defining-a-common-ide.adoc[`/.che/che-editor.yaml`] file in the source-code, and you want to specify the target IDE with the custom image.
+[IMPORTANT]
+====
 
-* The Git repository contains xref:defining-a-common-ide.adoc[`/.che/che-editor.yaml`] file in the source-code, and you want to override the first container image listed in the `components` section of the editor's devfile.
+* If the Git repository contains xref:defining-a-common-ide.adoc[`/.che/che-editor.yaml`] file in the source-code, the custom editor will be overridden with the new IDE image.
+
+* If the Git repository contains no xref:defining-a-common-ide.adoc[`/.che/che-editor.yaml`] file in the source-code, the default editor will be overridden with the new IDE image.
+
+* If you want to override the supported IDE and change the target editor image, you can use both parameters together: `che-editor` and  `editor-image` URL parameters.
+
+====
 
 The URL parameter to override the IDE image is `editor-image=`:
 
 [source,subs="+quotes,+attributes,+macros"]
 ----
-pass:c,a,q[{prod-url}]#__<git_repository_url>__?editor-image=__<image>__
+pass:c,a,q[{prod-url}]#__<git_repository_url>__?editor-image=__<container_registry/image_name:image_tag>__
 ----
 
 .Example:
