--- a/modules/administration-guide/pages/configuring-workspaces-nodeselector.adoc
+++ b/modules/administration-guide/pages/configuring-workspaces-nodeselector.adoc
@@ -46,7 +46,7 @@ spec:
 
 To avoid Pods and PVCs to be scheduled in different zones on large, multizone clusters, create an additional link:https://kubernetes.io/docs/concepts/storage/storage-classes/[`StorageClass`] object (pay attention to the `allowedTopologies` field), which will coordinate the PVC creation process.
 
-Pass the name of this newly created `StorageClass` to {prod-short} through the `+CHE_INFRA_KUBERNETES_PVC_STORAGE__CLASS__NAME+` environment variable. A default empty value of this variable instructs {prod-short} to use the cluster's default `StorageClass`.
+Pass the name of this newly created `StorageClass` to {prod-short} through the `CheCluster` Custom Resource. For more information, see: xref:configuring-storage-classes.adoc[].
 ====
 
 .Additional resources
