fixup! fixup! feat: Explain how users can override editor's container image

--- a/modules/end-user-guide/pages/url-parameter-for-the-ide-image.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-ide-image.adoc
@@ -12,9 +12,9 @@ You can use the `editor-image` parameter to set the custom IDE image for the wor
 [IMPORTANT]
 ====
 
-* If the Git repository contains xref:defining-a-common-ide.adoc[`/.che/che-editor.yaml`] file in the source-code, the custom editor will be overridden with the new IDE image.
+* If the Git repository contains xref:defining-a-common-ide.adoc[`/.che/che-editor.yaml`] file, the custom editor will be overridden with the new IDE image.
 
-* If the Git repository contains no xref:defining-a-common-ide.adoc[`/.che/che-editor.yaml`] file in the source-code, the default editor will be overridden with the new IDE image.
+* If there is no xref:defining-a-common-ide.adoc[`/.che/che-editor.yaml`] file in the Git repository, the default editor will be overridden with the new IDE image.
 
 * If you want to override the supported IDE and change the target editor image, you can use both parameters together: `che-editor` and  `editor-image` URL parameters.
 
