--- a/modules/administration-guide/pages/configuring-fuse.adoc
+++ b/modules/administration-guide/pages/configuring-fuse.adoc
@@ -7,7 +7,7 @@
 [id="configuring-fuse-overlayfs"]
 = Configuring fuse-overlayfs
 
-By default, the Universal Developer Image (UDI) contains Podman which can be used to build and push container images within a workspace.
+By default, the Universal Developer Image (UDI) contains Podman which you can use to build and push container images within a workspace.
 However, Podman in the UDI is configured to use the `vfs` storage driver which does not provide copy-on-write support.
 For more efficient image management, it is recommended to use the fuse-overlayfs storage driver which supports copy-on-write in rootless environments.
 
