--- a/modules/administration-guide/pages/configuring-fuse.adoc
+++ b/modules/administration-guide/pages/configuring-fuse.adoc
@@ -9,7 +9,7 @@
 
 By default, the Universal Developer Image (UDI) contains Podman which you can use to build and push container images within a workspace.
 However, Podman in the UDI is configured to use the `vfs` storage driver which does not provide copy-on-write support.
-For more efficient image management, it is recommended to use the fuse-overlayfs storage driver which supports copy-on-write in rootless environments.
+For more efficient image management, use the fuse-overlayfs storage driver which supports copy-on-write in rootless environments.
 
 This page describes how to make `/dev/fuse` be accessible to workspace containers, which is a requirement for using fuse-overlayfs.
 
