--- a/modules/administration-guide/pages/configuring-fuse.adoc
+++ b/modules/administration-guide/pages/configuring-fuse.adoc
@@ -14,6 +14,8 @@ For more efficient image management, use the fuse-overlayfs storage driver which
 
 == Enabling container access to /dev/fuse for OpenShift
 
+To use fuse-overlayfs, you must make `/dev/fuse` accessible to workspace containers first.
+
 [WARNING]
 ====
 Creating `MachineConfig` resources on an OpenShift cluster is a potentially dangerous task, as it allows making advanced, system-level changes to the cluster.
