--- a/modules/administration-guide/pages/configuring-fuse.adoc
+++ b/modules/administration-guide/pages/configuring-fuse.adoc
@@ -18,7 +18,7 @@ To use fuse-overlayfs, you must make `/dev/fuse` accessible to workspace contain
 
 [WARNING]
 ====
-Creating `MachineConfig` resources on an OpenShift cluster is a potentially dangerous task, as it allows making advanced, system-level changes to the cluster.
+Creating `MachineConfig` resources on an OpenShift cluster is a potentially dangerous task, as you are making advanced, system-level changes to the cluster.
 
 View the link:https://docs.openshift.com/container-platform/{ocp4-ver}/post_installation_configuration/machine-configuration-tasks.html#machine-config-overview-post-install-machine-configuration-tasks[MachineConfig documentation] for more details and possible risks.
 
