--- a/modules/administration-guide/pages/configuring-fuse.adoc
+++ b/modules/administration-guide/pages/configuring-fuse.adoc
@@ -32,7 +32,7 @@ View the link:https://docs.openshift.com/container-platform/{ocp4-ver}/post_inst
 
 .Procedure
 
-. Set an environment variable depending on whether your OpenShift cluster is a single node cluster, or a multi node cluster with separate control plane and worker nodes.
+. Set the environment variable based on the type of your OpenShift cluster: a single node cluster, or a multi node cluster with separate control plane and worker nodes.
 +
 For a single node cluster, set:
 [subs="+quotes,+attributes,+macros"]
