--- a/modules/administration-guide/pages/configuring-fuse.adoc
+++ b/modules/administration-guide/pages/configuring-fuse.adoc
@@ -34,7 +34,7 @@ View the link:https://docs.openshift.com/container-platform/{ocp4-ver}/post_inst
 
 . Set the environment variable based on the type of your OpenShift cluster: a single node cluster, or a multi node cluster with separate control plane and worker nodes.
 +
-For a single node cluster, set:
+* For a single node cluster, set:
 [subs="+quotes,+attributes,+macros"]
 ----
 $ NODE_ROLE=master
