--- a/modules/administration-guide/pages/configuring-fuse.adoc
+++ b/modules/administration-guide/pages/configuring-fuse.adoc
@@ -39,7 +39,7 @@ View the link:https://docs.openshift.com/container-platform/{ocp4-ver}/post_inst
 ----
 $ NODE_ROLE=master
 ----
-For a multi node cluster, set:
+* For a multi node cluster, set:
 [subs="+quotes,+attributes,+macros"]
 ----
 $ NODE_ROLE=worker
