--- a/modules/administration-guide/pages/configuring-fuse.adoc
+++ b/modules/administration-guide/pages/configuring-fuse.adoc
@@ -45,7 +45,7 @@ $ NODE_ROLE=master
 $ NODE_ROLE=worker
 ----
 
-. Set an environment variable for the OpenShift Butane config version. This version is the major and minor of the OpenShift cluster. For example, `4.12.0`, `4.13.0`, or `4.14.0`.
+. Set the environment variable for the OpenShift Butane config version. This variable is the major and minor version of the OpenShift cluster. For example, `4.12.0`, `4.13.0`, or `4.14.0`.
 +
 [subs="+quotes,+attributes,+macros"]
 ----
