--- a/modules/administration-guide/pages/configuring-fuse.adoc
+++ b/modules/administration-guide/pages/configuring-fuse.adoc
@@ -52,7 +52,7 @@ $ NODE_ROLE=worker
 $ VERSION=4.12.0
 ----
 
-. Create a `MachineConfig` resource that creates a drop-in CRI-O configuration file named `99-podman-fuse` in the `NODE_ROLE` nodes. This configuration file allows access to the `/dev/fuse` device for certain pods.
+. Create a `MachineConfig` resource that creates a drop-in CRI-O configuration file named `99-podman-fuse` in the `NODE_ROLE` nodes. This configuration file makes access to the `/dev/fuse` device possible for certain pods.
 +
 [subs="+quotes,+attributes,+macros"]
 ----
