--- a/modules/end-user-guide/pages/accessing-fuse.adoc
+++ b/modules/end-user-guide/pages/accessing-fuse.adoc
@@ -11,7 +11,7 @@ Using fuse-overlayfs requires access to `/dev/fuse`. This section describes the 
 
 .Prerequisites
 
-* The administrator has enabled access to `/dev/fuse` by following xref:administration-guide:configuring-fuse.adoc[]
+* The administrator has enabled access to `/dev/fuse` by following xref:administration-guide:configuring-fuse.adoc[].
 
 .Procedure
 
