--- a/modules/end-user-guide/pages/accessing-fuse.adoc
+++ b/modules/end-user-guide/pages/accessing-fuse.adoc
@@ -7,7 +7,7 @@
 [id="accessing-fuse"]
 = Accessing /dev/fuse from a workspace
 
-Using fuse-overlayfs requires access to `/dev/fuse`. This section describes the steps required for `/dev/fuse` to be accessible to workspace containers.
+You must have access to `/dev/fuse` to use fuse-overlayfs. This section describes how to make `/dev/fuse` accessible to workspace containers.
 
 .Prerequisites
 
