--- a/modules/end-user-guide/pages/enabling-overlay-with-a-configmap.adoc
+++ b/modules/end-user-guide/pages/enabling-overlay-with-a-configmap.adoc
@@ -7,7 +7,7 @@
 [id="enabling-fuse-overlay-with-a-configmap"]
 = Enabling fuse-overlayfs with a Configmap
 
-For Podman, the storage driver can be defined in the `~/.config/containers/storage.conf` file. Here are the default contents of the `/home/user/.config/containers/storage.conf` file in the UDI container:
+You can define the storage driver for Podman in the `~/.config/containers/storage.conf` file. Here are the default contents of the `/home/user/.config/containers/storage.conf` file in the UDI container:
 
 .`storage.conf`
 [source]
