--- a/modules/end-user-guide/pages/using-the-fuse-overlay-storage-driver.adoc
+++ b/modules/end-user-guide/pages/using-the-fuse-overlay-storage-driver.adoc
@@ -13,7 +13,7 @@ The UDI contains common development tools and dependencies commonly used by deve
 Podman is included in the UDI, allowing developers to build and push container images from their workspace.
 
 By default, Podman in the UDI is configured to use the `vfs` storage driver.
-For more efficient image management, it is recommended to use the fuse-overlayfs storage driver which supports copy-on-write in rootless environments.
+For more efficient image management, use the fuse-overlayfs storage driver which supports copy-on-write in rootless environments.
 
 To use fuse-overlayfs in a workspace, there are three requirements:
 
