--- a/modules/end-user-guide/pages/enabling-overlay-with-a-configmap.adoc
+++ b/modules/end-user-guide/pages/enabling-overlay-with-a-configmap.adoc
@@ -35,7 +35,7 @@ Otherwise, it is possible to update the `/home/user/.config/containers/storage.c
 
 .Prerequisites
 
-* The administrator has enabled access to `/dev/fuse` by following xref:administration-guide:configuring-fuse.adoc[]
+* The administrator has enabled access to `/dev/fuse` by following xref:administration-guide:configuring-fuse.adoc[].
 
 * A workspace with the required annotations are set by following xref:accessing-fuse.adoc[]
 
