--- a/modules/end-user-guide/pages/using-the-fuse-overlay-storage-driver.adoc
+++ b/modules/end-user-guide/pages/using-the-fuse-overlay-storage-driver.adoc
@@ -15,7 +15,7 @@ Podman is included in the UDI, allowing developers to build and push container i
 By default, Podman in the UDI is configured to use the `vfs` storage driver.
 For more efficient image management, use the fuse-overlayfs storage driver which supports copy-on-write in rootless environments.
 
-To use fuse-overlayfs in a workspace, there are three requirements:
+You must meet the following requirements to fuse-overlayfs in a workspace:
 
 . The administrator has configured `/dev/fuse` access on the cluster by following xref:administration-guide:configuring-fuse.adoc[].
 . The workspace has the necessary annotations for using the `/dev/fuse` device. See xref:accessing-fuse.adoc[].
