--- a/modules/end-user-guide/pages/accessing-fuse.adoc
+++ b/modules/end-user-guide/pages/accessing-fuse.adoc
@@ -12,18 +12,11 @@ You must have access to `/dev/fuse` to use fuse-overlayfs. This section describe
 .Prerequisites
 
 * The administrator has enabled access to `/dev/fuse` by following xref:administration-guide:configuring-fuse.adoc[].
+* Determine a workspace to use fuse-overlayfs with.
 
 .Procedure
 
-. Determine a workspace to add the required annotations to. The required annotations defined in xref:administration-guide:configuring-fuse.adoc[] are as follows.
-+
-[source,yaml,subs="+quotes,+attributes"]
-----
-io.openshift.podman-fuse: ''
-io.kubernetes.cri-o.Devices: /dev/fuse
-----
-
-. Use the `pod-overrides` attribute to add the required annotations to the workspace. The `pod-overrides` attribute allows merging certain fields in the workspace pod's `spec`.
+. Use the `pod-overrides` attribute to add the required annotations defined in xref:administration-guide:configuring-fuse.adoc[] to the workspace. The `pod-overrides` attribute allows merging certain fields in the workspace pod's `spec`.
 +
 [subs="+quotes,+attributes,+macros"]
 ----
