--- a/modules/administration-guide/pages/configuring-fuse.adoc
+++ b/modules/administration-guide/pages/configuring-fuse.adoc
@@ -7,8 +7,8 @@
 [id="configuring-fuse-overlayfs"]
 = Configuring fuse-overlayfs
 
-By default, the Universal Developer Image (UDI) contains Podman which you can use to build and push container images within a workspace.
-However, Podman in the UDI is configured to use the `vfs` storage driver which does not provide copy-on-write support.
+By default, the Universal Developer Image (UDI) contains Podman and Buildah which you can use to build and push container images within a workspace.
+However, Podman and Buildah in the UDI are configured to use the `vfs` storage driver which does not provide copy-on-write support.
 For more efficient image management, use the fuse-overlayfs storage driver which supports copy-on-write in rootless environments.
 
 
@@ -140,5 +140,5 @@ $ oc debug node/__<nodename>__
 sh-4.4# stat /host/etc/crio/crio.conf.d/99-podman-fuse
 ----
 
-== Using fuse-overlayfs for Podman within a workspace
-Users can follow xref:end-user-guide:using-the-fuse-overlay-storage-driver.adoc[] to update existing workspaces to use the fuse-overlayfs storage driver for Podman.
+== Using fuse-overlayfs for Podman and Buildah within a workspace
+Users can follow xref:end-user-guide:using-the-fuse-overlay-storage-driver.adoc[] to update existing workspaces to use the fuse-overlayfs storage driver for Podman and Buildah.
