--- a/modules/end-user-guide/pages/using-the-fuse-overlay-storage-driver.adoc
+++ b/modules/end-user-guide/pages/using-the-fuse-overlay-storage-driver.adoc
@@ -1,18 +1,18 @@
 :_content-type: CONCEPT
-:description: Using the fuse-overlayfs storage driver for Podman
-:keywords: authentication, authenticate, github, gitlab, bitbucket
-:navtitle: Using the fuse-overlayfs storage driver for Podman
+:description: Using the fuse-overlayfs storage driver for Podman and Buildah
+:keywords: fuse, overlay, fuse-overlayfsm, podman, buildah, storage, driver
+:navtitle: Using the fuse-overlayfs storage driver for Podman and Buildah
 :page-aliases:
 
-[id="using-the-fuse-overlay-storage-driver-for-podman"]
-= Using the fuse-overlayfs storage driver for Podman
+[id="using-the-fuse-overlay-storage-driver-for-podman-and-buildah"]
+= Using the fuse-overlayfs storage driver for Podman and Buildah
 
 By default, newly created workspaces that do not specify a devfile will use the Universal Developer Image (UDI).
 The UDI contains common development tools and dependencies commonly used by developers.
 
-Podman is included in the UDI, allowing developers to build and push container images from their workspace.
+Podman and Buildah are included in the UDI, allowing developers to build and push container images from their workspace.
 
-By default, Podman in the UDI is configured to use the `vfs` storage driver.
+By default, Podman and Buildah in the UDI are configured to use the `vfs` storage driver.
 For more efficient image management, use the fuse-overlayfs storage driver which supports copy-on-write in rootless environments.
 
 You must meet the following requirements to fuse-overlayfs in a workspace:
