Add a note about gitconfig username and email automatic update

--- a/modules/end-user-guide/pages/mounting-git-configuration.adoc
+++ b/modules/end-user-guide/pages/mounting-git-configuration.adoc
@@ -46,6 +46,11 @@ __<ConfigMap_prepared_in_step_1>__
 EOF
 ----
 
+[NOTE]
+====
+The `user.name` and `user.email` fields can be set automatically from a git provider, connected to {prod-short} by a xref:using-a-git-provider-access-token.adoc[Git-provider access token]. The related data must be set in the provider's user profile page.
+====
+
 .Verification
 
 . xref:starting-a-workspace-from-a-git-repository-url.adoc[Start a new workspace by using the URL of a remote Git repository] that the Git provider hosts.
