fixup! Add a note about gitconfig username and email automatic update

--- a/modules/end-user-guide/pages/mounting-git-configuration.adoc
+++ b/modules/end-user-guide/pages/mounting-git-configuration.adoc
@@ -31,11 +31,11 @@ metadata:
     controller.devfile.io/mount-as: subpath
     controller.devfile.io/mount-path: /etc/
 data:
-  gitconfig: "[user] \n  name = __<git_user_name>__ \n  email = __<git_user_email>__" <2>
+  gitconfig: <gitconfig content> <2>
 ----
 +
 <1> A user namespace. Visit `pass:c,a,q[{prod-url}]/api/kubernetes/namespace` to get your {prod-short} user namespace as `name`.
-<2> Your Git user name and email.
+<2> The content of your gitconfig file content.
 
 . Apply the ConfigMap.
 +
