--- a/modules/administration-guide/pages/configuring-fuse.adoc
+++ b/modules/administration-guide/pages/configuring-fuse.adoc
@@ -1,4 +1,4 @@
-:_content-type: ASSEMBLY
+:_content-type: PROCEDURE
 :description: Configuring fuse-overlayfs
 :keywords: administration-guide, configuring, fuse
 :navtitle: Configuring fuse-overlayfs
@@ -57,7 +57,7 @@ $ VERSION=4.12.0
 +
 . Create a `MachineConfig` resource that creates a drop-in CRI-O configuration file named `99-podman-fuse` in the `NODE_ROLE` nodes. This configuration file makes access to the `/dev/fuse` device possible for certain pods.
 +
-[subs="+quotes,+attributes,+macros"]
+[source,subs="+quotes,+macros"]
 ----
 cat << EOF | butane | oc apply -f -
 variant: openshift
