feat: fuse-overlayfs configuration (#2685)
* feat: fuse-overlayfs configuration

Signed-off-by: dkwon17 <dakwon@redhat.com>

* Update

Signed-off-by: dkwon17 <dakwon@redhat.com>

* Indentation

Signed-off-by: dkwon17 <dakwon@redhat.com>

* Update

Signed-off-by: dkwon17 <dakwon@redhat.com>

* Update modules/administration-guide/pages/configuring-fuse.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/configuring-fuse.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update butane version

Signed-off-by: dkwon17 <dakwon@redhat.com>

* Update modules/administration-guide/pages/configuring-fuse.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/configuring-fuse.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/configuring-fuse.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/configuring-fuse.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/configuring-fuse.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/configuring-fuse.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/configuring-fuse.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/configuring-fuse.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/configuring-fuse.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/administration-guide/pages/configuring-fuse.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/end-user-guide/pages/accessing-fuse.adoc

Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

* Update modules/end-user-gu

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -80,6 +80,7 @@
 *** xref:configuring-cluster-roles-for-users.adoc[]
 *** xref:configuring-advanced-authorization.adoc[]
 *** xref:removing-user-data-in-compliance-with-the-gdpr.adoc[]
+** xref:configuring-fuse.adoc[]
 * xref:managing-ide-extensions.adoc[]
 ** xref:extensions-for-microsoft-visual-studio-code-open-source.adoc[]
 * xref:managing-workloads-using-the-che-server-api.adoc[]
