fix: update details about fuse for OpenShift 4.15
Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/modules/administration-guide/pages/configuring-fuse.adoc
+++ b/modules/administration-guide/pages/configuring-fuse.adoc
@@ -16,6 +16,11 @@ For more efficient image management, use the fuse-overlayfs storage driver which
 
 To use fuse-overlayfs, you must make `/dev/fuse` accessible to workspace containers first.
 
+[NOTE]
+====
+This procedure is not necessary for OpenShift versions 4.15 and later, since the `/dev/fuse` device is available by default. See link:https://docs.openshift.com/container-platform/4.15/release_notes/ocp-4-15-release-notes.html#ocp-4-15-nodes-dev-fuse[Release Notes].
+====
+
 [WARNING]
 ====
 Creating `MachineConfig` resources on an OpenShift cluster is a potentially dangerous task, as you are making advanced, system-level changes to the cluster.
