--- a/modules/end-user-guide/pages/enabling-overlay-with-a-configmap.adoc
+++ b/modules/end-user-guide/pages/enabling-overlay-with-a-configmap.adoc
@@ -35,7 +35,7 @@ Otherwise, you can update the `/home/user/.config/containers/storage.conf` for a
 
 .Prerequisites
 
-* The administrator has enabled access to `/dev/fuse` by following xref:administration-guide:configuring-fuse.adoc[].
+* For OpenShift versions older than 4.15, the administrator has enabled access to `/dev/fuse` by following xref:administration-guide:configuring-fuse.adoc[].
 
 * A workspace with the required annotations are set by following xref:accessing-fuse.adoc[]
 
