update table (CRW-5764)

--- a/modules/administration-guide/pages/installing-image-puller-on-openshift-using-cli.adoc
+++ b/modules/administration-guide/pages/installing-image-puller-on-openshift-using-cli.adoc
@@ -104,6 +104,10 @@ include::example$snip_{project-context}-cloning-image-puller-project.adoc[]
 |The name of the ServiceAccount created and used by the deployment
 |`kubernetes-image-puller`
 
+|`KIP_IMAGE`
+|The image puller image to copy the sleep binary from
+|`{image-puller-image-name}:latest`
+
 |===
 
 
