--- a/modules/end-user-guide/pages/mounting-git-configuration.adoc
+++ b/modules/end-user-guide/pages/mounting-git-configuration.adoc
@@ -48,7 +48,7 @@ EOF
 
 [NOTE]
 ====
-The `user.name` and `user.email` fields can be set automatically to the `gitconfig` content from a git provider, connected to {prod-short} by a xref:using-a-git-provider-access-token.adoc[Git-provider access token] or a token generated via OAuth. The related data must be set in the provider's user profile page.
+The `user.name` and `user.email` fields will be set automatically to the `gitconfig` content from a git provider, connected to {prod-short} by a xref:using-a-git-provider-access-token.adoc[Git-provider access token] or a token generated via OAuth, if username and email are set on the provider's user profile page.
 ====
 
 .Verification
