--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -16,6 +16,7 @@
 ** xref:calculating-che-resource-requirements.adoc[]
 * xref:installing-che.adoc[]
 ** xref:installing-che-in-the-cloud.adoc[]
+** xref:installing-che-in-unsupported-oidc-kubernetes.adoc[]
 *** xref:installing-che-on-openshift-using-cli.adoc[]
 *** xref:installing-che-on-openshift-using-the-web-console.adoc[]
 *** xref:installing-che-in-a-restricted-environment.adoc[]
