--- a/modules/administration-guide/pages/installing-che-in-unsupported-oidc-kubernetes.adoc
+++ b/modules/administration-guide/pages/installing-che-in-unsupported-oidc-kubernetes.adoc
@@ -114,7 +114,7 @@ users:
 . Replace the `server:` URL with the LB IP you noted earlier. (e.g. 10.1.2.3:443)
 . Search and replace all occurreces of the words my-vcluster  with che-cluster.
 
-. Replace the users part in the yaml with the following: 
+. Replace the users part in the YAML with the following: 
 +
 ----
   user:
