--- a/modules/administration-guide/pages/installing-che-in-unsupported-oidc-kubernetes.adoc
+++ b/modules/administration-guide/pages/installing-che-in-unsupported-oidc-kubernetes.adoc
@@ -112,7 +112,7 @@ users:
 +
 . Update the KubeConfig file
 . Replace the `server:` URL with the LB IP you noted earlier. (e.g. 10.1.2.3:443)
-. Search and replace all occurreces of the words my-vcluster  with che-cluster.
+. Search and replace all occurrences of the words my-vcluster  with che-cluster.
 
 . Replace the users part in the YAML with the following: 
 +
