OIDC Typo Changes

--- a/modules/administration-guide/pages/installing-che-in-unsupported-oidc-kubernetes.adoc
+++ b/modules/administration-guide/pages/installing-che-in-unsupported-oidc-kubernetes.adoc
@@ -1,11 +1,11 @@
 :_content-type: PROCEDURE
-:navtitle: Installing {prod-short} on OIDC Unsupported {kubernetes}
-:description: Installing {prod-short} on {kubernetes} that doesn't support OIDC yet.
-:keywords: overview, installing-che-on-unsupported-{kubernetes}
-:page-aliases: installation-guide:installing-che-on-minikube-keycloak-oidc, overview:installing-che-on-minikube-keycloak-oidc
+:navtitle: Installing {prod-short} in OIDC Unsupported {kubernetes}
+:description: Installing {prod-short} in {kubernetes} that doesn't support OIDC yet.
+:keywords: installing-che-in-unsupported-{kubernetes}
+:page-aliases: installation-guide:installing-che-in-oidc-unsupported-kubernetes
 
 [id="installing-{prod-id-short}-on-unsupported-kubernetes"]
-= Installing {prod-short} on OIDC Unsupported {kubernetes} Cluster with Keycloak as the OIDC provider
+= Installing {prod-short} in OIDC Unsupported {kubernetes} Cluster
 
 You can deploy {prod-short} into a {kubernetes} cluster that doesn't support OIDC.
 
